APP_DEBUG hidden

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     }],
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
+        "APP_DEBUG": "false",
         "APP_URL": "https://FaizAzmi.com",
         "APP_KEY":"base64:fax7xBina3JsFf+f/8yzkZqR8RAtC1lR2uJtCFdtQ99=",
  
